--- a/cv_en_site_web.css
+++ b/cv_en_site_web.css
@@ -144,7 +144,7 @@ a:visited.lien_site_web {
 	display: flex;
 	align-items: left;
 }
-.formation i {
+.icone_formation i {
 	margin-left: 5.25rem;
 	color: #00ACC1;
 	font-size: 2.75rem;
@@ -179,12 +179,9 @@ a:visited.lien_site_web {
 	font-weight: bold;
 	font-size: 1.25rem;
 }
-.date:before {
-	content: "#";
-	font-size: 1.25rem;
-	font-weight: bold; 
+.date_ville_formation i {
 	color: #00ACC1;
-	margin-right: 1.8rem;
+	margin-right: 1.2rem;
 }
 .ville {
 	margin-left: 2.5rem;
@@ -278,7 +275,7 @@ a:visited.lien_formation {
 	display: flex;
 	align-items: left;
 }
-.competences i {
+.icone_competences i {
 	color: #00ACC1;
 	font-size: 2.75rem;
 	margin-top: 0.5rem;
@@ -306,26 +303,26 @@ i:hover {
 	margin-right: 5rem;
 }
 .liste_competences li {
-	list-style-type: none;
+	list-style: none;
 	font-size: 1.6rem;
 	font-weight: bold;
 	margin-left: 2.5rem;
 	margin-top: 0.5rem;
 }
-.liste_competences li:before {
-	content: "#";
-	font-size: 1.6rem;
-	font-weight: bold; 
+.liste_competences i {
+	margin-right: 1rem;
 	color: #00ACC1;
-	margin-right: 1.8rem;
 }
 .sous_competences {
 	overflow-y: scroll;
-	height: 3rem;
-	margin-top: 0.5rem;
+	height: 4.7rem;
 	margin-left: 5rem;
-	font-size: 1.25rem;
+	font-size: 1rem;
 	font-weight : normal;
+}
+.sous_competences i {
+	margin-right: 1rem;
+	color: #00ACC1;
 }
 
 /* Footer contenant les loisirs et le portfolio */
@@ -406,10 +403,13 @@ i:hover {
 	list-style-type: none;
 }
 
-@media screen and (max-width:768px) {
+/*Responsive for tablets*/
+
+@media screen and (max-width:768px) { 
 	.box_header {
 		display: flex;
 		flex-direction: column;
+		width: 768px;
 	}
 	.cadre_photo_didentite {
 		width: 768px;
@@ -461,6 +461,7 @@ i:hover {
 		display: flex;
 		flex-direction: column;
 		margin-bottom: 20rem;
+		margin-top: 11rem;
 	}
 	.presentation {
 		width: 768px;
@@ -477,6 +478,7 @@ i:hover {
 	.loisirs_portfolio {
 		display: flex;
 		flex-direction: column;
+		margin-top: 24rem;
 	}
 	.loisirs {
 		width: 768px;
@@ -489,6 +491,103 @@ i:hover {
 	}
 	.portfolio {
 		width: 768px;
+	}
+	.contenu_portfolio {
+		margin-top: 1rem;
+	}
+}
+
+/*Responsive for Google Nexus 7*/
+
+@media screen and (max-width:600px) { 
+	.box_header {
+		display: flex;
+		flex-direction: column;
+		width: 600px;
+	}
+	.cadre_photo_didentite {
+		width: 600px;
+	}
+	.photo_didentite {
+		margin-top: 0rem;
+		width: 10rem;
+	}
+	.prenom_nom {
+		width: 600px;
+		margin-bottom: 0rem;
+    }
+    .prenom_nom h1 {
+    	margin-left: 8rem;
+    	font-size: 2.5rem;
+    	margin-top: 3rem;
+    }
+    .prenom_nom h2 {
+    	margin-left: 8rem;
+    	font-size: 1.5rem;
+    	margin-bottom: 0rem;
+    }
+	.contact_formation {
+		display: flex;
+		flex-direction: column;
+		margin-bottom: 8rem;
+		margin-top: 0rem;
+	}
+	.contact {
+		width: 600px;
+		position: relative;
+		margin-top: 0rem;
+	}
+	.liste_contact {
+		margin-top: 0rem;
+	}
+	.liste_contact li {
+		display : list-item;
+		float: left;
+		margin-right: 2rem;
+	}
+	.formation {
+		width: 600px;
+	}
+	.contenu_formation {
+		margin-left: 0rem;
+	}
+	.nom_formation {
+		margin-left: 2rem;
+	}
+	.presentation_competences {
+		display: flex;
+		flex-direction: column;
+		margin-bottom: 20rem;
+		margin-top: 11rem;
+	}
+	.presentation {
+		width: 600px;
+	}
+	.presentation h3 {
+		margin-bottom: 1rem;
+	}
+	.presentation p {
+		margin-top: 0rem;
+	}
+	.competences {
+		width: 600px;
+	}
+	.loisirs_portfolio {
+		display: flex;
+		flex-direction: column;
+		margin-top: 24rem;
+	}
+	.loisirs {
+		width: 600px;
+	}
+	.icones_loisirs i {
+		margin-top: 0rem;
+		font-size: 2rem;
+		margin-left: 10rem;
+		margin-bottom: 2rem;
+	}
+	.portfolio {
+		width: 600px;
 	}
 	.contenu_portfolio {
 		margin-top: 1rem;
